--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <img src="images/logo.png" alt="Red Bull Logo" class="logo" />
-    <h1 class="title">Guess Which Red Bull You Are.</h1>
+    <h1 class="title">Guess Which Red Bull You Need</h1>
     <p class="subtitle">– Not All Wings Are the Same.</p>
 
     <div class="carousel-wrapper">
